data/all_generated_tests/raw_wast_tests/loop_InvalidorInconsistentControlFlowGraph_805.wast
;; 6. **Test Unwinding and Operand Replacement**:    - Design a `loop` with multiple backward branches where operations before the branches return operands that are not the same type as when initially branched.    - **Constraint**: Correct operand stack unwinding and replacement.    - **CFG Impact**: Incorrect operand flow can mislead type handling in CFG, leading to type errors.

(assert_invalid
  (module
    (func $type-stack-unwind-replacement (param i32) (result i32)
      (local i32)
      (i32.const 1)
      (local.set 0)
      (loop $loop (result i32)
        (local.get 0)
        (i32.const 2)
        (local.set 0)
        (local.get 0)
        (br 1)
        (local.get 0)
        (br 0)
      )
    )
  )
  "type mismatch"
)